err/products.eclecture.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/DataGridField'...
Compiling './lib/python3.5/site-packages/Products/DataGridField/Column.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/Column.py", line 68
    raise AttributeError, "Class %s has no default_method %s" % (str(context), self.default_method)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/DataGridField/DataGridWidget.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/DataGridWidget.py", line 68
    raise AttributeError, "DataGridWidget missing column definition for " + id + " in field " + field.getName()
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/DataGridField/HelpColumn.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/HelpColumn.py", line 42
    raise AttributeError, "Class %s is missing vocabulary function %s" % (str(instance), self.vocabulary)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/DataGridField/SelectColumn.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/SelectColumn.py", line 45
    raise AttributeError, "Class %s is missing vocabulary function %s" % (str(instance), self.vocabulary)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/DataGridField/examples'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/de'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/en'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/es'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/fr'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/it'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/nl'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/pt_BR'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles/default'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles/example'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles/example/types'...
Listing './lib/python3.5/site-packages/Products/DataGridField/skins'...
Listing './lib/python3.5/site-packages/Products/DataGridField/skins/DataGridWidget'...
Compiling './lib/python3.5/site-packages/Products/DataGridField/skins/DataGridWidget/queryDataGrid.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/skins/DataGridWidget/queryDataGrid.py", line 26
    return query(obj, *args)
                           ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/DataGridField/tests'...
Listing './lib/python3.5/site-packages/Products/ECLecture'...
Listing './lib/python3.5/site-packages/Products/ECLecture/content'...
Compiling './lib/python3.5/site-packages/Products/ECLecture/content/ECLecture.py'...
***   File "./lib/python3.5/site-packages/Products/ECLecture/content/ECLecture.py", line 541
    except ValueError, ve:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ECLecture/i18n'...
Listing './lib/python3.5/site-packages/Products/ECLecture/portlets'...
Compiling './lib/python3.5/site-packages/Products/ECLecture/portlets/portlet.py'...
***   File "./lib/python3.5/site-packages/Products/ECLecture/portlets/portlet.py", line 104
    lectureObjects = map(lambda (item): item.getObject(), self.brains());
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ECLecture/profiles'...
Listing './lib/python3.5/site-packages/Products/ECLecture/profiles/default'...
Listing './lib/python3.5/site-packages/Products/ECLecture/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/ECLecture/skins'...
Listing './lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_images'...
Listing './lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_styles'...
Listing './lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_templates'...
Compiling './lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_templates/ecl_participants_export.py'...
***   File "./lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_templates/ecl_participants_export.py", line 128
    return output
                ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_templates/ldap_migration.py'...
***   File "./lib/python3.5/site-packages/Products/ECLecture/skins/eclecture_templates/ldap_migration.py", line 74
    print "no raw_res"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.DataGridField-1.9.6.egg-info'...
Listing './lib/python3.5/site-packages/Products.ECLecture-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
